--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,36 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^2.0.17
+  # path_provider: ^2.0.17
+  # image_picker: ^1.2.1
+  # permission_handler: ^12.0.1
+  # provider: ^6.1.2
+  # sqflite: ^2.3.0
+  # path: ^1.8.3
   image_picker: ^1.2.1
-  permission_handler: ^12.0.1
-  provider: ^6.1.2
+  path_provider: ^2.1.1
+  cupertino_icons: ^1.0.6
+  provider: ^6.1.1
   sqflite: ^2.3.0
   path: ^1.8.3
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  intl: ^0.20.2
+  table_calendar: ^3.0.9
+  shared_preferences: ^2.2.2
+  google_sign_in: ^6.2.1
+  crypto: ^3.0.3
+  flutter_local_notifications: ^19.5.0
+  timezone: ^0.10.1
+  flutter_carousel_widget: ^2.0.3
+  fl_chart: ^0.66.0
+  smooth_page_indicator: ^1.1.0
+  share_plus: ^7.2.1
+  permission_handler: ^11.2.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -65,6 +80,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/applewatch.png
+    - assets/images/
+    - assets/intro/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
